# track

./: .gitignore  .secret_key  ARCHITECTURAL_FEEDBACK.md  ARCHITECTURE.md  DETAILED_TRANSCRIPTION.md  GITHUB_PROJECT.md  GOALS.md  IMPLEMENTATION_PLAN.md  INSTALL.md  NETINV_HANDOVER.md  PROGRESS.md  PROJECT_GOALS.md  PYTHON_REWRITE.md  README.md  STATE.md  SYNC.md  TRACK_NOTES.md  WORKING_ON.md  audit_devicecontrol_20260415.md  config.json  config.py  cookies.txt  go.sum  map3d-collect-reconstruction-set.sh  map3d-dense.sh  map3d-jobs.sh  map3d-model-reconstruct.sh  map3d-model.sh  map3d-prepare-session.sh  map3d-reconstruct.sh  map3d-texture.sh  map3d.sh  map3dprocess.sh  netinventory-client.sh  network_graph.dot  pyproject.toml  requirements.txt  run.sh  test_cookies  test_session.py  (+4 more)
.github/: pull_request_template.md
app/: __init__.py
devicecontrol/: .gitignore  NODES.md  README.md  autobootstrap.sh  bootstrap-host.sh  requirements.txt  run-lab.sh  run.py  (+3 more)
netinventory/: ARCHITECTURE.md  HANDOVER.md  PROJECT_GOALS.md  README.md  go.mod  pyproject.toml  run-track.sh  run_tests
netinventory/cmd/: analyze_snapshots.py
netinventory/internal/collect/: integration_test.go  netid.go  snapshot.go
netinventory/internal/monitor/: gps_test.go  netlink.go
netinventory/internal/plugins/: stage_a.go  stage_b.go
netinventory/src/netinventory/: __init__.py  cli.py  config.py  context.py  export.py  hub_web.py
netinventory/src/netinventory/collect/: collector.py
netinventory/src/netinventory/core/: models.py
netinventory/src/netinventory/templates/: hub_index.html
(+199 files in other folders)
